--- a/BlogSoftUni/BlogSoftUni.csproj
+++ b/BlogSoftUni/BlogSoftUni.csproj
@@ -212,6 +212,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\art.jpeg" />
+    <Content Include="Content\bodybuilding-19a.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="favicon.ico" />
     <Content Include="faviconn.ico" />
