--- a/BlogSoftUni/BlogSoftUni.csproj
+++ b/BlogSoftUni/BlogSoftUni.csproj
@@ -219,6 +219,7 @@
     <Content Include="faviconn.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="img\logo.png" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
