Upload made by Stefan and PLamen

--- a/BlogSoftUni/Views/Web.config
+++ b/BlogSoftUni/Views/Web.config
@@ -31,6 +31,10 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+	  <modules runAllManagedModulesForAllRequests="true" >
+		  <add name="UploaderModule"
+			   type="Aurigma.ImageUploaderFlash.UploaderModule"/>
+	  </modules>
   </system.webServer>
 
   <system.web>
@@ -39,5 +43,9 @@
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+	  <httpModules>
+		  <add name="UploaderModule"
+			   type="Aurigma.ImageUploaderFlash.UploaderModule"/>
+	  </httpModules>
   </system.web>
 </configuration>
