--- a/BlogSoftUni/bin/BlogSoftUni.dll.config
+++ b/BlogSoftUni/bin/BlogSoftUni.dll.config
@@ -72,6 +72,7 @@
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
+  maxRequestLength = "4096kb";
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
